sass/theme/_theme.scss
/* Bootstrap Overrides */

body {
  font-family: $font-family-san-serif;
}

h1, h2 {
  font-family: $font-family-serif;
  font-weight: $font-weight-bold;
}

h3, h4, h5, h6 {
  font-family: $font-family-san-serif;
  font-weight: $font-weight-bold;
}

// reset font size because of current font selection; can be tweaked if fonts change
h3 {
  font-size: 1.5rem;
}
h4 {
  font-size: 1.375rem;
}

a:hover {
  text-decoration: none;
}

// zero outside gutters
/*
.row {
  > [class*=col-]:first-child {
    padding-left: 0;
  }
  > [class*=col-]:last-child {
    padding-right: 0;
  }
}
*/

blockquote, .blockquote {
  font-family: $font-family-serif;
  letter-spacing: -1px;
  p {
    font-size: $font-size-base * 2;
    font-weight: $font-weight-bold;
    line-height: $line-height-base * 0.6;
  }
  cite {
    position: relative;
    font-size: $small-font-size;
    font-style: normal;
  }
}

figcaption {
  padding-top: $spacer * 0.25;
}

.navbar {
  &.bg-primary {
    a.navbar-brand {
      color: #fff;
    }
  }
  .navbar-brand.custom-logo-link img.img-fluid {
    //max-height: 72px;
    //width: auto;
  }
  ul.navbar-nav {
    li {
      a {
        text-transform: uppercase;
        font-size: $small-font-size;
        font-weight: $font-weight-bold;
      }
      &.donate-nav-item {
        margin-top: -5px;
        a {
          color: rgba(255,255,255,1);
          padding: 5px;
        }
      }
    }
  }
}

.jumbotron {
  h2:before {
    display: block;
    margin: 1.5rem auto;
    width: 120px;
    content: '';
    border-bottom: 1px solid #fff;
  }
}

.card-columns {
  @include media-breakpoint-up(lg) {
    column-count: 3;
  }
  @include media-breakpoint-only(md) {
    column-count: 2;
  }
  @include media-breakpoint-down(sm) {
    column-count: 1;
  }
}

.card-columns.card-horizontal {
  @include media-breakpoint-up(lg) {
    column-count: 2;
  }
  @include media-breakpoint-down(md) {
    column-count: 1;
  }
}

.side-quote {
  color: $primary;
  font-size: $font-size-lg;
  margin-top: 100px;
}

.lead {
  font-size: $font-size-base * 1.25;
  letter-spacing: $tight-letter-spacing;
}

.btn {
  letter-spacing: $tight-letter-spacing;
}

/* Beaver Builder Overrides */

// zero gutters on non BB pages so header and content line up
/*
body:not(.fl-builder) {
  .row {
    margin-left: 0;
    margin-right: 0;
  }
}
*/

.wrapper {
  &#full-width-page-wrapper {
    //padding-top: 0px;
    #content {
      padding: 0;
      margin: 0;
      max-width: none;
      width: auto;
      .entry-header {
        /* make this a container with fixed width */
        margin-left: auto;
        margin-right: auto;
        @include make-container-max-widths();
      }
    }
  } 
  &.has-hero {
    padding-top: 0px;
    .hero-header {
      position: relative;
      background-color: rgba(0, 0, 0, .85);
      overflow: visible;
      margin-bottom: $spacer * 3;
      &.overlay:before{
        position: absolute;
        content:" ";
        top:0;
        left:0;
        width:100%;
        height:100%;
        display: block;
        z-index:0;
        background-color: rgba(0,0,0,0.5);
      }
      * {
        position: relative;
      }
      h1 {
        color: $gray-100;
        text-align: center;
      }
      .lead {
        color: $gray-100;
        text-align: center;
      }
    }
  }
}


.fl-heading {
  /* Dual-colour headings */
  .fl-heading-text {
    strong {
      color: $secondary;
      width: 100%;
    }
  }
}

.fl-button-text {
  letter-spacing: $tight-letter-spacing;
}


/* Let's Play With Widgets */

.nb-contact-form {
  h3 { // TODO: this should not be an H3 in markup
    color: #8D8F92;
    font-family: $font-family-san-serif;
    font-size: $font-size-base;
  }
  iframe {
    border: 0;
    width: 100%;
  }
}

/* Global Blocks */

.utility {
  .header-search {
    margin-top: 6px;
    .input-group {
      float: right;
      input.field {
        font-size: 12px;
        width: 0px;
        z-index: 3;
        top: 0;
        right: 0;
        position: absolute;
        transition: 0.3s;
        background: none;
        border-color: transparent;
        &:focus {
          width: 300px;
          background: #fff;
          border-color: #fff;
          z-index: 1;
          border-radius: $input-border-radius;
        }
      }
      .input-group-append {
        z-index: 2;
        input.submit, button.submit {
          text-transform: uppercase;
          color: rgba(255,255,255,0.5);
          position: absolute;
          display: inline-block;
          top: 0;
          right: 0;
          &:hover {
            color: rgba(255,255,255,0.75);
          }
        }
      }
    }
  }
  .lang-switcher {
    div {
      padding-left: 0;
      padding-right: 0;
      ul li a {
        text-transform: uppercase;
        font-weight: bold;
        font-size: .8rem;
      }
      &.wpml-ls-legacy-dropdown, &.wpml-ls-legacy-dropdown-click {
        width: auto;
        ul li a {
          background-color: $gray-800;
          border-color: $gray-800;
          color: #fff;
          opacity: 0.5;
          &:hover {
            text-decoration: none;
            opacity: 0.75;
          }
        }
      }
      &.wpml-ls-legacy-list-horizontal {
        li.wpml-ls-item {
          border-right: solid 1px;
          border-color: rgba(255, 255, 255, 0.5);
          a.wpml-ls-link {
            opacity: .5;
            &:hover {
              opacity: .75;
              text-decoration: none;
            }
          }
          &.wpml-ls-first-item a {
            padding-left: 0;
          }
          &.wpml-ls-last-item {
            border: none;
            a {
              padding-right: 0;
            }
          }
        }
      }
    }
    
  }
  // colors for bg-primary
  &.bg-primary {
    .lang-switcher {
      div {
        &.wpml-ls-legacy-list-horizontal {
          .wpml-ls-item {
            a.wpml-ls-link {
              color: #fff;
            }
          }
        }
      }
    }
  }
}

.publication-wrapper {
  font-size: 80%;
  h3 {
    font-style: 1.5rem;
  }
}

.bio {
  //border-top: 1px solid $secondary;
  margin-top: $spacer * 3;
  padding-top: $spacer * 1.5;
  figure.author {
    position: relative;
    float: left;
    width: 100px;
    height: 100px;
    padding-right: $spacer;
  }
  span h3 {
    font-size: $font-size-base;
  }
}

// bouncy arrow - with thanks to https://codepen.io/bisaillonyannick/pen/pvZeGg
.arrow {
  text-align: center;
  margin: 5% 0;
}
.bounce {
  -moz-animation: bounce 2s infinite;
  -webkit-animation: bounce 2s infinite;
  animation: bounce 2s infinite;
}
@keyframes bounce {
  0%, 20%, 50%, 80%, 100% {
    transform: translateY(0);
  }
  40% {
    transform: translateY(-30px);
  }
  60% {
    transform: translateY(-15px);
  }
} // end bouncy arrow

.social-icons {
  padding-left: 0;
  list-style: none;
  > li {
    display: inline-block;
    margin-left: 5px;
    margin-right: 5px;
    a {
      i {
        background: $gray-800;
        color: #fff;
        width: 36px;
        height: 36px;
        border-radius: 4px;
        font-size: 24px;
        text-align: center;
        padding-top: 15%;
        transition: all 0.1s ease-in-out;
        margin-bottom: 5px;
      }
      span {
        @include sr-only;
      }
    }
  }
  &.color {
    > li {
      a {
        i {
          &.fa-facebook {
            background:#3b5998;
            &:hover {
              background: lighten(#3b5998, 10%)
            }
          }
          &.fa-linkedin {
            background:#007bb6;
            &:hover {
              background: lighten(#007bb6, 10%)
            }
          }
          &.fa-twitter {
            background:#00aced;
            &:hover {
              background: lighten(#00aced, 10%)
            }
          }
          &.fa-google-plus {
            background:#dd4b39;
            &:hover {
              background: lighten(#dd4b39, 10%)
            }
          }
        }
      }
    }
  }
  &.light {
    > li {
      a {
        i {
          color: $gray-500;
          background: $gray-100;
          border: 1px solid $gray-100;
          &:hover {
            color: $primary;
          }
        }
      }
    }
  }
  &.dark {
    > li {
      a {
        i {
          color: $gray-500;
          background: $gray-800;
          &:hover {
            color: $primary;
          }
        }
      }
    }
  }
} // ul.social-icons


/* Footer */

#wrapper-footer-full, #wrapper-footer {
  padding-top: $spacer * 3;
  background-color: $black;
  .container {
    color: $secondary;
    font-size: $font-size-sm;
    .wpml-ls-statics-footer.wpml-ls-legacy-list-horizontal {
      display: inline-block;
      padding-left: 0;
    }
    .nb-contact-form {
      margin-top: $spacer * 1.5;
      input.submit-button {
        color: $primary;
      }
    }
  }
}


/* Blog/Archive page customisations */

.blog, .archive, .publications {
  .card.has-post-thumbnail {
    position: relative;
    overflow: hidden;
    img {
      max-width: 100%;
      transition: all 0.3s;
      display: block;
      width: 100%;
      height: auto;
      transform: scale(1);
      &:hover {
        transform: scale(1.1);
      }
    }
  }
  .entry-header {
    h2.entry-title {
      font-size: 1.25rem;
    }
    .entry-meta {
      font-size: .75rem;
    }
  }
  .entry-content {
    font-size: $font-size-sm;
  }
}

.single-post, .single-publications {
  .entry-header {
    margin-top: $spacer * 1.5;
    margin-bottom: $spacer * 1.5;
    .entry-meta {
      font-size: $small-font-size;
    }
  }
  nav.post-navigation {
    padding-top: $spacer * 3;
    clear: both;
    .nav-links {
      border-top: 1px solid $secondary;
      border-bottom: 1px solid $secondary;
      .nav-previous {
        padding: $spacer;
        border-bottom: 1px solid $secondary;
        @include media-breakpoint-up(md) {
          border-bottom: 0;
          border-right: 1px solid $secondary;
        }
      }
      .nav-next {
        padding: $spacer;
      }
    }
  }
}


/* People pages customisations */

#people-wrapper {
  .card-body {
    padding: 1rem;
    .entry-header .entry-title {
      font-size: 1.25rem;
    }
    .entry-content {
      font-size: $font-size-sm;
    }
  }
}

.single article.people {
  .entry-header {
    margin-top: $spacer * 1.5;
    margin-bottom: $spacer * 1.5;
    .card {
      max-width: 650px;
      .card-body {
        padding: 1rem;
      }
    }
  }
}

